--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+</form>
 <h1>Design your taco!</h1>
 <img th:src="@{/images/cat.jpeg}"/>
 
@@ -62,6 +66,7 @@
 
         <button>Submit your taco</button>
     </div>
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
 </form>
 </body>
 </html>
