--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+</form>
 <h1>Welcome to...</h1>
 <img th:src="@{/images/cat.jpeg}"/>
 </body>
