--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
+</form>
 
 <form method="POST" th:action="@{/orders}" th:object="${order}">
     <h1>Order your taco creations!</h1>
@@ -78,6 +82,7 @@
     <br/>
 
     <input type="submit" value="Submit order"/>
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
 </form>
 
 </body>
